[package]
name = "hyper-tls"
version = "0.3.1" # don't forget html_root_url in lib.rs
description = "Default TLS implementation for use with hyper"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
keywords = ["hyper", "tls", "http", "https", "ssl"]
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/hyper-tls"
documentation = "https://docs.rs/hyper-tls"

[features]
default = ["runtime"]
vendored = ["native-tls/vendored"]
runtime = ["hyper/runtime"]

[dependencies]
bytes = "0.4"
futures = "0.1.21"
native-tls = "0.2"
hyper = { version="0.12", default-features=false }
tokio-io = "0.1"

[dev-dependencies]
tokio = "0.1.5"
